--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1537,3 +1537,31 @@ section,
     border-radius: 4px;
 }
 
+/*for the cloud-iam.html */
+.services-list a.active {
+  background-color: #0d6efd; /* Or your theme's primary color */
+  color: #fff;
+}
+
+
+/*-- CSS for the Button --*/
+    .project-link-btn {
+      background-color: #4CA4D4; /* Updated blue color */
+      border: none;
+      border-radius: 50px;
+      padding: 12px 30px;
+      color: #ffffff; /* White text for contrast */
+      font-weight: 500;
+      text-decoration: none; /* Removes underline from link */
+      display: inline-block; /* Ensures padding and other styles apply correctly */
+      transition: all 0.3s ease-in-out;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    }
+
+    .project-link-btn:hover {
+      background-color: #4594BF; /* Slightly darker shade of the new blue for hover */
+      color: #ffffff;
+      transform: translateY(-3px) scale(1.05); /* Lifts and enlarges the button */
+      box-shadow: 0 8px 25px rgba(76, 164, 212, 0.4); /* Glowing effect with the new color */
+    }
+
